# DirectorGraph

./: .dockerignore  .env.example  .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml
docs/: API_COMPATIBILITY.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_PROOF.md  EVALUATION.md  HYBRID_ALIBABA_ARCHITECTURE.md  MODEL_ROUTING.md  OPERATIONS_RUNBOOK.md  RESPONSIBLE_AI.md  SERVERLESS_ARCHITECTURE.md  THREAT_MODEL.md
evals/: README.md  live-results.json  live-results.md  methodology.md  run_ablation.py
scripts/: build-source-archive.sh  check-architecture-assets.py  validate.sh  (+17 more)
services/api/: Dockerfile  pyproject.toml
services/api/app/: __init__.py  config.py  db.py  demo.py  function_compute.py  main.py  models.py  oss_repository.py  repository.py  schemas.py  task_checkpoints.py  task_runtime.py  task_submitter.py  worker.py
services/api/app/api/: routes.py
services/api/app/clients/: __init__.py  dashscope.py  ffmpeg.py  qwen.py  storage.py
services/api/app/core/: __init__.py  agents.py  budget.py  orchestrator.py  story.py
services/api/app/providers/: __init__.py  base.py  errors.py  factory.py  live.py  mock.py
services/api/tests/: test_budget.py  test_e2e.py  test_function_compute.py  test_live_payloads.py  test_mock_quality.py  test_orchestrator_resume.py  test_oss_repository.py  test_provider_errors.py  test_repository.py  test_runtime.py  test_storage_security.py  test_story.py  test_submission_artifacts.py  test_task_checkpoints.py  test_task_runtime.py  test_task_status.py  test_task_submitter.py
studio_mcp/: README.md  pyproject.toml  qwen-agent-mcp.json  server.py
(+54 files in other folders)
