[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "directorgraph-studio-mcp"
version = "0.1.0"
description = "Custom production-control MCP server for DirectorGraph"
requires-python = ">=3.11"
dependencies = ["mcp>=1.9,<2.0", "pydantic>=2.10,<3.0"]
